--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse scelerisque lacus venenatis neque feugiat, et sodales mi semper. Donec eget ligula auctor, vestibulum tortor at, blandit est. In accumsan et turpis fermentum ultricies. Duis sit amet tempor metus. In a ex luctus, blandit nibh nec, pellentesque urna. Proin a magna non urna venenatis euismod ultrices vitae tellus. Integer neque elit, tempus nec nunc aliquet, ornare sollicitudin libero. Sed semper a nulla id blandit. In maximus aliquam purus, sed facilisis neque euismod scelerisque.</p>
-<%= link_to "Login", "/auth/google_oauth2?client_id=#{ENV[GOOGLE_CLIENT_ID]}" %>
+<%= link_to "Login", "/auth/google_oauth2?client_id=#{ENV['GOOGLE_CLIENT_ID']}" %>
