--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,2 +1,6 @@
 <h3>Welcome, <%= @user.username %></h3>
 <%= button_to "Discover Movies", discover_path, method: :get %>
+<section class="friends">
+  <%# <%=# button_to "Add Friend", discover_path, method: :get %> %>
+  <p>You currently have no friends.</p>
+</section>
