Add new friend form to dashboard Friends section
Co-authored-by: Gaby Mendez <62727545+gabichuelas@users.noreply.github.com>

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,6 +3,13 @@
 <%= button_to "Discover Movies", discover_path, method: :get %>
 
 <section class="friends">
+  <center>
+  <%= form_tag friendships_path, method: :post do %>
+    <%= label_tag :friend_email, "Friend's Email" %>
+    <%= email_field_tag :email  %>
+    <%= submit_tag "Add Friend" %>
+  <% end %>
+</center>
   <%# <%=# button_to "Add Friend", discover_path, method: :get %> %>
   <p>You currently have no friends.</p>
 </section>
