--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,2 +1,7 @@
 <!-- discover/index.html.erb -->
 <%= button_to "Find Top Rated Movies", movies_path, method: :get %>
+
+<%= form_tag movies_path, method: :get do %>
+  <%= text_field_tag :movie_keywords %>
+  <%= submit_tag "Find Movies" %>
+<% end %>
