--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,7 +1,7 @@
 <%= button_to "Discover Movies", discover_path, method: :get %>
 
 <section class="friends">
-  <%# <%=# button_to "Add Friend", discover_path, method: :get %> %>
+  <%# <%=# button_to "Add Friend", discover_path, method: :get %> 
   <p>You currently have no friends.</p>
 </section>
 
