--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
   <body>
     <main>
+      <% flash.each do |type, message| %>
+        <p><%= message %></p>
+      <% end %>
+      
       <%= yield %>
     </main>
     <footer>
