--- a/app/views/partials/_movie_controls.html.erb
+++ b/app/views/partials/_movie_controls.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Find Top Rated Movies", movies_path, method: :get %>
+<%= button_to "Find Top Rated Movies", "/movies", method: :get %>
 
 <%= form_tag movies_path, method: :get do %>
   <%= text_field_tag :movie_keywords %>
