--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Discover Movies", discover_path, method: :get %>
+<%= button_to 'Discover Movies', discover_path, method: :get %>
 
 <section class="friends">
   <h2>Friends</h2>
