Add find_by(id) method to MovieDBService; edit Movie poro to only save id/title, the rest can be instance methods, add info to movie details page, route New Viewing Party button

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,1 +1,5 @@
-<%= button_to "New Viewing Party", "" %>
+<%= button_to "New Viewing Party", "/viewing_parties/new?movie_id=#{@movie.id}", method: :get %>
+
+<h3><%= @movie.title %></h3>
+<p>Vote Average: <%= @movie.vote_avg %></p>
+<p>Summary: <%= @movie.summary %></p>
