Restructured Movie class and SearchResults

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,8 +3,9 @@
 <h3><%= @movie.title %></h3>
 <p>Vote Average: <%= @movie.vote_avg %></p>
 <p>Summary: <%= @movie.summary %></p>
-<ul>Genres:</ul>
-  <% @movie.genres.each do |genre| %>
-    <li><%= genre %></li>
-  <% end %>
+<p>Genres:</p>
+<ul>
+<% @movie.genres.each do |genre| %>
+  <li><%= genre %></li>
+<% end %>
 </ul>
