Add #movie_cast(id) to MovieDBService

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,6 +2,7 @@
 
 <h3><%= @movie.title %></h3>
 <p>Vote Average: <%= @movie.vote_avg %></p>
+<p>Runtime: <%= @movie.runtime %> minutes</p>
 <p>Summary: <%= @movie.summary %></p>
 <p>Genres:</p>
 <ul>
