Dream drive the movie#first_10_cast_members method, added helpers in SearchResults and DBService

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,3 +10,9 @@
   <li><%= genre %></li>
 <% end %>
 </ul>
+<p>Cast (top 10):</p>
+<ul>
+<% @movie.first_ten_cast_members.each do |member| %>
+  <li><%= member %></li>
+<% end %>
+</ul>
