Create CastMember PORO

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -13,6 +13,6 @@
 <p>Cast (top 10):</p>
 <ul>
 <% @movie.first_ten_cast_members.each do |member| %>
-  <li><%= member %></li>
+  <li><%= member.name %> -- as <%= member.character %></li>
 <% end %>
 </ul>
