Rename 'top40' to generic 'search-results' class name
Co-authored-by: Gaby Mendez <62727545+gabichuelas@users.noreply.github.com>

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
 <%= render '/partials/movie_controls' %>
-<section class="top40">
+<section class="search-results">
 <!-- top 40 rated movies from API here -->
   <% @movies.each do |movie| %>
     <div class="movie">
