Change #count usage across app to #size
Co-authored-by: Gaby Mendez <62727545+gabichuelas@users.noreply.github.com>

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -16,7 +16,7 @@
   <li><%= member.name %> -- as <%= member.character %></li>
 <% end %>
 </ul>
-<h4>Reviews(<%= @movie.reviews.count %>)</h4>
+<h4>Reviews(<%= @movie.reviews.size %>)</h4>
 <div class="movie-review">
   <% @movie.reviews.each do |review| %>
     <em>By: <%= review.author %></em>
