Specify movie id in button_to params attribute instead of in path

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "New Viewing Party", "/viewing_parties/new?movie_id=#{@movie.id}", method: :get %>
+<%= button_to "New Viewing Party", "/viewing_parties/new", method: :get, params: {movie_id: @movie.id} %>
 <!-- use path helper for new viewing party button: viewing_parties_new_path(@movie) -->
 
 <h3 class='movie-title'><%= @movie.title %></h3>
