--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -6,7 +6,7 @@
   <%= label_tag :duration, "Party duration (in minutes):" %>
   <%= number_field_tag :duration, @movie.runtime %> <br>
 
-  <%= label_tag :date, "Date:" %>
+  <%= label_tag :date, "Date (mm/dd/yyyy):" %>
   <%= date_field_tag :date %> <br><br>
 
   <%= label_tag :friends, "Select the friends you'd like to invite to your viewing party:" %> <br>
