--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Viewing Party</h1>
 
-<%= form_tag viewing_parties_path({movie_id: 13778}) do %>
+<%= form_tag viewing_parties_path do %>
   <p class="movie-title">Movie: <%= @movie.title %></p>
 
   <%= hidden_field_tag :movie_id, @movie.id %>
