Change :host to :user in Party model so that Parties will get created properly

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -23,7 +23,8 @@
   <% if current_user.parties %>
     <% current_user.parties.each do |party| %>
       <h4><%= party.movie %></h4>
-      <p><%= party.date %></p>
+      <p>Date: <%= party.date %></p>
+      <p>Time: </p>
     <% end %>
   <% else %>
     <p>You have no viewing parties coming up.</p>
