--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -15,7 +15,7 @@
   <% if current_user.friends.empty? %>
     <p>No friends to invite to your viewing party.</p>
   <% else %>
-    <div id='checkbox'>
+    <div class='checkbox, friends'>
       <%= collection_check_boxes(:users, :id, current_user.friends, :id, :username, include_hidden: false) %>
     </div>
   <% end %> <br>
