--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -23,7 +23,8 @@
   <% unless current_user.parties.empty? %>
     <% current_user.parties.each do |party| %>
       <h4><%= party.movie %></h4>
-      <p><%= party.date %></p>
+      <p>Date: <%= party.date %></p>
+      <p>Time: <%= #fill in party time %></p>
     <% end %>
   <% else %>
     <p>You have no viewing parties coming up.</p>
