Clean up models and associations, edit dashboard#show

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -24,7 +24,8 @@
     <% current_user.parties.each do |party| %>
       <h4><%= party.movie %></h4>
       <p>Date: <%= party.date %></p>
-      <p>Time: <%= #fill in party time %></p>
+      <p>Time: </p>
+
     <% end %>
   <% else %>
     <p>You have no viewing parties coming up.</p>
