--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,4 @@
 <%= render '/partials/movie_controls' %>
-<section class="search-results">
-<!-- top 40 rated movies from API here -->
-  <% @movies.each do |movie| %>
-    <div class="movie">
-      <h4><%= link_to movie.title, "/movies/detail?id=#{movie.id}", class: "movie-title" %> / <%= movie.vote_avg %></h4>
-    </div>
-  <% end %>
+<section id="search-results">
+  <%= render '/partials/search_results' %>
 </section>
