--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -14,7 +14,7 @@
   <%= label_tag :time, "Time:" %>
   <%= time_field_tag :time %> <br><br>
 
-  <%= label_tag :friends, "Select the friends you'd like to invite to your viewing party:" %> <br>
+  <%= label_tag :friends, "Invite friends to your viewing party:" %> <br>
   <% if current_user.friends.empty? %>
     <p>No friends to invite to your viewing party.</p>
   <% else %>
