Calendar event creation set up attempt 1
Co-authored-by: Gaby Mendez <62727545+gabichuelas@users.noreply.github.com>

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -24,7 +24,7 @@
     <% current_user.parties.each do |party| %>
       <h4><%= party.movie %></h4>
       <p>Date: <%= party.date %></p>
-      <p>Time: </p>
+      <p>Time: <%= party.time %></p>
     <% end %>
   <% else %>
     <p>You have no viewing parties coming up.</p>
