--- a/app/views/partials/_movie_controls.html.erb
+++ b/app/views/partials/_movie_controls.html.erb
@@ -1,6 +1,6 @@
-<%= button_to "Find Top Rated Movies", "/movies", method: :get %>
+<%= button_to "Find Top Rated Movies", discover_path({q: "toprated"}), remote: true, method: :get %>
 
-<%= form_tag movies_path, method: :get do %>
+<%= form_tag discover_path, remote: true, method: :get do %>
   <%= text_field_tag :movie_keywords %>
   <%= submit_tag "Find Movies" %>
 <% end %>
