Edit path and params for 'find top rated movies' button, edit DiscoverController#index

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,4 +1,4 @@
 <!-- discover/index.html.erb -->
 <%= render '/partials/movie_controls' %>
-<section id="search-results">
-</section>
+<div id="search-results">
+</div>
