Edit path for search results partial movie title link

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,8 +9,12 @@
 <p class='genres'>Genres:</p>
 
 <ul>
-  <% @movie.genres.each do |genre| %>
-    <li><%= genre %></li>
+  <% if @movie.genres.nil? %>
+    <p>No genres listed.</p>
+  <% else %>
+    <% @movie.genres.each do |genre| %>
+      <li><%= genre %></li>
+    <% end %>
   <% end %>
 </ul>
 
